--- a/Baekjoon_CodePlus_SW/.project
+++ b/Baekjoon_CodePlus_SW/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Baekjoon_CodePlus_SW</name>
+	<name>Baekjoon_CodePlus_SW_JAVA</name>
 	<comment></comment>
 	<projects>
 	</projects>
